--- a/aiakos/templates/base.html
+++ b/aiakos/templates/base.html
@@ -1,3 +1,4 @@
+{% load i18n static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,25 +26,44 @@
 					{{request.get_host|capfirst}} - Aiakos
 				</a>
 			</div>
-			
-			<ul class="nav navbar-nav navbar-right">
-				{% if user.is_staff %}
-				<li>
-					<a href="/admin/">Admin</a>
-				</li>
-				{% endif %}
-				{% if user.is_authenticated %}
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{user}} <span class="caret"></span></a>
-					<ul class="dropdown-menu">
-						<li><a href="{{user.get_absolute_url}}">Your profile</a></li>
-						<li role="separator" class="divider"></li>
-						<li><a href="{% url 'login' %}">Switch account</a></li>
-						<li><a href="{% url 'logout' %}">Log out</a></li>
-					</ul>
-				</li>
-				{% endif %}
-			</ul>
+
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li class="{% if request.resolver_match.url_name == 'apps' %}active{% endif %}"><a href="{% url 'apps' %}">Apps</a></li>
+				</ul>
+
+				<ul class="nav navbar-nav navbar-right">
+					{% if user.is_staff %}
+					<li>
+						<a href="/admin/">Admin</a>
+					</li>
+					{% endif %}
+					{% if user.is_authenticated %}
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+							{% if user.profile.picture %}
+							<img src="{{user.profile.picture}}" style="height: 20px;">
+							{% else %}
+							{{user}}
+							{% endif %}
+							<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu" style="width: 250px;">
+							<li><a style="white-space: normal;">
+								{% blocktrans trimmed %}
+									Signed in as <strong>{{user}}</strong>
+								{% endblocktrans %}
+							</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="{{user.get_absolute_url}}">Your profile</a></li>
+							<li class="{% if request.resolver_match.url_name == 'identities' %}active{% endif %}"><a href="{% url 'extauth:identities' %}">External identites</a></li>
+							<li role="separator" class="divider"></li>
+							<li><a href="{% url 'logout' %}">Sign out</a></li>
+						</ul>
+					</li>
+					{% endif %}
+				</ul>
+			</div>
 		</div>
 	</nav>
 	<div class="container">
