Fix consent view.

--- a/aiakos/templates/oidc_provider/authorize.html
+++ b/aiakos/templates/oidc_provider/authorize.html
@@ -16,7 +16,7 @@
 				{% endfor %}
 			</ul>
 			<br>
-			<button type="submit" class="btn btn-primary btn-block btn-lg" name="allow">{% trans 'Accept' %}</button>
+			<button type="submit" class="btn btn-primary btn-block btn-lg" name="allow" value="yes">{% trans 'Accept' %}</button>
 			<button type="submit" class="btn btn-secondary btn-block">{% trans 'Decline' %}</button>
 		</form>
 	</div>
