--- a/aiakos/templates/base.html
+++ b/aiakos/templates/base.html
@@ -69,13 +69,9 @@
 		</div>
 	</nav>
 	<div class="container">
-        {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                    <li class="{{ message.tags }}">{{ message }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
+		{% for message in messages %}
+			<div class="alert alert-info {{ message.tags }}" role="alert">{{ message }}</div>
+		{% endfor %}
 
 		{% block content %}
 		{% endblock %}
