--- a/aiakos/templates/registration/password_reset_complete.html
+++ b/aiakos/templates/registration/password_reset_complete.html
@@ -4,12 +4,11 @@
 {% block content %}
 
 <div class="row">
-<div class="col-md-12">
-	<h2>{% trans 'Your password has been changed.' %}</h2>
-	<div class="row">
-		{% trans 'Your password has been set. You may go ahead and log in now.' %}
+	<div class="col-md-6 col-md-offset-3">
+		<h2>{% trans "Your password has been changed." %}</h2>
+		<p>{% trans "Your password has been set. You may go ahead and log in now." %}</p>
+		<a href="{% url 'login' %}" class="btn btn-primary btn-block">{% trans 'Log in' %}</a>
 	</div>
-</div>
 </div>
 
 {% endblock %}
