--- a/aiakos/templates/registration/password_reset_confirm.html
+++ b/aiakos/templates/registration/password_reset_confirm.html
@@ -4,16 +4,19 @@
 {% block content %}
 
 <div class="row">
-<div class="col-md-12">
-	<h2>{% trans 'Confirm password reset' %}</h2>
-	<div class="row">
-		<form method="post">
-		  {% csrf_token %}
-		  {{ form|crispy }}
-		  <button type="submit">{% trans 'Change my password' %}</button>
-		</form>
+	<div class="col-md-6 col-md-offset-3">
+		<h2>{% trans "Change password" %}</h2>
+		<div class="row">
+
+			<form method="post">
+				{% csrf_token %}
+				{{ form|crispy }}
+
+				<button type="submit" class="btn btn-primary btn-block btn-lg">{% trans "Change password" %}</button>
+			</form>
+
+		</div>
 	</div>
-</div>
 </div>
 
 {% endblock %}
