--- a/aiakos/templates/base.html
+++ b/aiakos/templates/base.html
@@ -29,13 +29,13 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="{% if request.resolver_match.url_name == 'apps' %}active{% endif %}"><a href="{% url 'apps' %}">Apps</a></li>
+					<li class="{% if request.resolver_match.url_name == 'apps' %}active{% endif %}"><a href="{% url 'apps' %}">{% trans "Apps" %}</a></li>
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right">
 					{% if user.is_staff %}
 					<li>
-						<a href="/admin/">Admin</a>
+						<a href="/admin/">{% trans "Admin" %}</a>
 					</li>
 					{% endif %}
 					{% if user.is_authenticated %}
@@ -55,12 +55,11 @@
 								{% endblocktrans %}
 							</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="{{user.get_absolute_url}}">Your profile</a></li>
-							<li class="{% if request.resolver_match.url_name == 'identities' %}active{% endif %}"><a href="{% url 'extauth:identities' %}">External identites</a></li>
+							<li><a href="{{user.get_absolute_url}}">{% trans "Your profile" %}</a></li>
+							<li class="{% if request.resolver_match.url_name == 'identities' %}active{% endif %}"><a href="{% url 'identities' %}">{% trans "External identites" %}</a></li>
+							<li class="{% if request.resolver_match.url_name == 'change-password' %}active{% endif %}"><a href="{% url 'change-password' %}">{% trans "Change password" %}</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="{% url 'custom-password-change' %}">Password change</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="{% url 'logout' %}">Sign out</a></li>
+							<li><a href="{% url 'logout' %}">{% trans "Sign out" %}</a></li>
 						</ul>
 					</li>
 					{% endif %}
