--- a/aiakos/templates/registration/password_change.html
+++ b/aiakos/templates/registration/password_change.html
@@ -4,16 +4,16 @@
 {% block content %}
 
 <div class="row">
-<div class="col-md-12">
-	<h2>{% trans 'Password change' %}</h2>
-	<div class="row">
-		<form method="post">
-		  {% csrf_token %}
-		  {{ form|crispy }}
-		  <button type="submit">Save changes</button>
-		</form>
+	<div class="col-md-6 col-md-offset-3">
+		<h2>{% trans "Change password" %}</h2>
+		<div class="row">
+			<form method="post">
+			{% csrf_token %}
+			{{ form|crispy }}
+			<button type="submit" class="btn btn-primary btn-block btn-lg">{% trans "Change password" %}</button>
+			</form>
+		</div>
 	</div>
-</div>
 </div>
 
 {% endblock %}
