Clean up emails.

--- a/aiakos/templates/registration/email/reset-not-allowed.html
+++ b/aiakos/templates/registration/email/reset-not-allowed.html
@@ -2,14 +2,9 @@
 
 <p>{% blocktrans %}You're receiving this email because you requested a password reset for your user account at {{site_name}}.{% endblocktrans %}</p>
 
-<p>{% blocktrans %}However, you can't reset password, as there's no password associated with your account.{% endblocktrans %}</p>
+<p>{% blocktrans %}However, you can't reset password, as password reset was disabled for this e-mail address.{% endblocktrans %}</p>
 
-<p>{% blocktrans %}You can log in with:{% endblocktrans %}</p>
-<ul>
-{% for ei in user.externalidentity_set.all %}
-	<li>{{ei.provider}}</li>
-{% endfor %}
-</ul>
+{% include "registration/email/-log-in-with.html" %}
 
 <p>{% blocktrans %}Thanks for using our site!{% endblocktrans %}</p>
 
