--- a/aiakos/templates/registration/identities.html
+++ b/aiakos/templates/registration/identities.html
@@ -8,7 +8,7 @@
 <div class="row">
 	<div class="col-md-6">
 		<h2>{% trans "Your external identities" %}</h2>
-		{% for ei in user.externalidentity_set.all %}
+		{% for ei in user.external_identities %}
 		<div class="media">
 			<div class="media-left">
 				{% if ei.profile.profile %}
