--- a/aiakos/templates/registration/identities.html
+++ b/aiakos/templates/registration/identities.html
@@ -2,11 +2,12 @@
 {% load i18n static crispy_forms_tags %}
 
 {% block content %}
+<form method="post">
+{% csrf_token %}
+
 <div class="row">
 	<div class="col-md-6">
-		<form method="post">
-		{% csrf_token %}
-		<h2>Your external identities</h2>
+		<h2>{% trans "Your external identities" %}</h2>
 		{% for ei in user.externalidentity_set.all %}
 		<div class="media">
 			<div class="media-left">
@@ -20,25 +21,40 @@
 			</div>
 			<div class="media-body">
 				<h4 class="media-heading">{{ei.external_name}} @ {{ei.provider}}</h4>
-				<button type="submit" name="disconnect" value="{{ei.id}}" class="btn btn-default btn-xs">Disconnect</button>
+				<button type="submit" name="disconnect" value="{{ei.id}}" class="btn btn-default btn-xs">{% trans "Disconnect" %}</button>
+				{% if ei.provider.protocol %}
+					{% if ei.trusted %}
+					<button type="submit" name="untrust" value="{{ei.id}}" class="btn btn-default btn-xs">{% trans "Disable login" %}</button>
+					{% else %}
+					<button type="submit" name="trust" value="{{ei.id}}" class="btn btn-default btn-xs">{% trans "Enable login" %}</button>
+					{% endif %}
+				{% else %}
+					{% if ei.trusted %}
+					<button type="submit" name="untrust" value="{{ei.id}}" class="btn btn-default btn-xs">{% trans "Disable password reset" %}</button>
+					{% else %}
+					<button type="submit" name="trust" value="{{ei.id}}" class="btn btn-default btn-xs">{% trans "Enable password reset" %}</button>
+					{% endif %}
+				{% endif %}
 			</div>
 		</div>
 		{% endfor %}
-		</form>
 	</div>
 
 	<div class="col-md-6">
 		<h2>Connect another identity</h2>
 		<div class="row">
-		<div class="col-md-8">
-		{% for provider in identity_providers %}
-		<a href="{{provider.login_url}}" class="btn btn-default btn-block">
-		{% blocktrans trimmed %}
-			Sign in with {{provider}}
-		{% endblocktrans %}
-		</a>
-		{% endfor %}
+			<div class="col-md-8">
+				{% for provider in identity_providers %}
+				<button type="submit" name="connect" value="{{provider.domain}}" class="btn btn-default btn-block">
+					{% blocktrans trimmed %}
+						Sign in with {{provider}}
+					{% endblocktrans %}
+				</button>
+				{% endfor %}
+			</div>
 		</div>
 	</div>
 </div>
+
+</form>
 {% endblock %}
