--- a/aiakos/templates/registration/logged_out.html
+++ b/aiakos/templates/registration/logged_out.html
@@ -6,7 +6,7 @@
 	<div class="col-md-6 col-md-offset-3">
 		<h2>{% trans "You are now logged out." %}</h2>
 
-		<a href="{% url 'login' %}" class="btn btn-secondary btn-block">{% trans 'Log in again' %}</a>
+		<a href="{% url 'extauth:login' %}" class="btn btn-secondary btn-block">{% trans 'Log in again' %}</a>
 	</div>
 </div>
 {% endblock %}
