--- a/aiakos/templates/base.html
+++ b/aiakos/templates/base.html
@@ -56,7 +56,7 @@
 							</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a href="{{user.get_absolute_url}}">{% trans "Your profile" %}</a></li>
-							<li class="{% if request.resolver_match.url_name == 'identities' %}active{% endif %}"><a href="{% url 'identities' %}">{% trans "External identites" %}</a></li>
+							<li class="{% if request.resolver_match.url_name == 'identities' %}active{% endif %}"><a href="{% url 'extauth:identities' %}">{% trans "External identites" %}</a></li>
 							<li class="{% if request.resolver_match.url_name == 'change-password' %}active{% endif %}"><a href="{% url 'change-password' %}">{% trans "Change password" %}</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a href="{% url 'logout' %}">{% trans "Sign out" %}</a></li>
