--- a/aiakos/templates/base.html
+++ b/aiakos/templates/base.html
@@ -15,12 +15,14 @@
 	body { padding-top: 70px; }
 	.navbar-brand { line-height: 50px; padding: 0 15px; }
 	.navbar-brand img { display: inline; height: 24px; padding-right: 10px; }
+	.container.narrow { max-width: 500px; }
+	.tab-pane { padding-top: 10px; }
 	</style>
   </head>
   <body>
 
 	<nav class="navbar navbar-fixed-top">
-		<div class="container-fluid">
+		<div class="{% block navbar-container-class %}container{% endblock %}">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="/">
 					{{request.get_host|capfirst}} - Aiakos
@@ -29,7 +31,9 @@
 
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
+				{% if user.is_authenticated %}
 					<li class="{% if request.resolver_match.url_name == 'apps' %}active{% endif %}"><a href="{% url 'apps' %}">{% trans "Apps" %}</a></li>
+				{% endif %}
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right">
@@ -67,7 +71,7 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container">
+	<div class="{% block body-container-class %}container{% endblock %}">
 		{% for message in messages %}
 			<div class="alert alert-info {{ message.tags }}" role="alert">{{ message }}</div>
 		{% endfor %}
