--- a/aiakos/templates/base.html
+++ b/aiakos/templates/base.html
@@ -21,7 +21,7 @@
   </head>
   <body>
 
-	<nav class="navbar navbar-fixed-top">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="{% block navbar-container-class %}container{% endblock %}">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="/">
