--- a/aiakos/templates/base.html
+++ b/aiakos/templates/base.html
@@ -51,7 +51,7 @@
 							{{user.username}}
 							{% elif user.email %}
 							{{user.email}}
-							{% else %}}
+							{% else %}
 							{{user.id}}
 							{% endif %}
 							<span class="caret"></span>
