--- a/aiakos/templates/openid_provider/authorize.html
+++ b/aiakos/templates/openid_provider/authorize.html
@@ -1,25 +1,22 @@
-{% extends 'base.html' %}
+{% extends 'narrow.html' %}
 {% load i18n staticfiles %}
 
 {% block content %}
 
-<div class="row">
-	<div class="col-md-6 col-md-offset-3">
-		<h2>{% trans 'Authorize application' %}</h2>
-		<p class="lead">Client <i>{{ client.profile.name }}</i> would like to access this information of you.</p>
-		<form method="post">
-			{% csrf_token %}
-			{{ hidden_inputs }}
-			<ul>
-				{% for name, desc in scope.items %}
-				<li><strong>{{ desc.name }}</strong> <br><i class="text-muted">{{ desc.description }}</i></li>
-				{% endfor %}
-			</ul>
-			<br>
-			<button type="submit" class="btn btn-primary btn-block btn-lg" name="_allow" value="yes">{% trans 'Accept' %}</button>
-			<button type="submit" class="btn btn-secondary btn-block">{% trans 'Decline' %}</button>
-		</form>
-	</div>
-</div>
+{% with appname=client.oauth_app.name %}
+	<h2>{% blocktrans %}Authorize <i>{{appname}}</i>{% endblocktrans %}</h2>
+	<p class="lead">Application <i>{{appname}}</i> would like to access this information of you.</p>
+	<form method="post">
+		{{ hidden_inputs }}
+		<ul>
+			{% for name, desc in scope.items %}
+			<li><strong>{{ desc.name }}</strong> <br><i class="text-muted">{{ desc.description }}</i></li>
+			{% endfor %}
+		</ul>
+		<br>
+		<button type="submit" class="btn btn-primary btn-block btn-lg" name="_allow" value="yes">{% trans 'Accept' %}</button>
+		<button type="submit" class="btn btn-secondary btn-block">{% trans 'Decline' %}</button>
+	</form>
+{% endwith %}
 
 {% endblock %}
