--- a/aiakos/templates/registration/auth.html
+++ b/aiakos/templates/registration/auth.html
@@ -1,7 +1,17 @@
-{% extends "narrow.html" %}
+{% extends 'narrow.html' %}
 {% load i18n static crispy_forms_tags %}
 
 {% block content %}
+
+<h2>{% trans "Sign in" %}</h2>
+{% if flow.auth_request %}
+	<p class="lead">
+	{% with flow.auth_request.client.oauth_app.name as appname %}
+		{% blocktrans %}to continue to {{appname}}{% endblocktrans %}
+	{% endwith %}
+	</p>
+{% endif %}
+
 <form method="post">
 	{% csrf_token %}
 	<input type="hidden" name="method" value="oauth">
@@ -39,12 +49,6 @@
 			{{login_form|crispy}}
 
 			<button type="submit" class="btn btn-primary btn-block btn-lg">{% trans "Log in" %}</button>
-		</form>
-
-		<form method="post">
-			{% csrf_token %}
-			<input type="hidden" name="method" value="cancel">
-			<button type="submit" class="btn btn-danger btn-block btn-lg">{% trans "Cancel" %}</button>
 		</form>
 
 	</div>
