--- a/aiakos/templates/registration/finish_registration.html
+++ b/aiakos/templates/registration/finish_registration.html
@@ -1,17 +1,20 @@
-{% extends 'base.html' %}
+{% extends 'narrow.html' %}
 {% load i18n static crispy_forms_tags %}
 
 {% block content %}
 
-<div class="row">
-	<div class="col-md-6 col-md-offset-3">
-		<h2>{% trans "Create account" %}</h2>
-		<form method="post">
-			{% csrf_token %}
-			{{ form|crispy }}
-			<button type="submit" class="btn btn-primary btn-block btn-lg">{% trans "Confirm your email" %}</button>
-		</form>
-	</div>
-</div>
+<h2>{% trans "Create account" %}</h2>
+{% if flow.auth_request %}
+	<p class="lead">
+	{% with flow.auth_request.client.oauth_app.name as appname %}
+		{% blocktrans %}to continue to {{appname}}{% endblocktrans %}
+	{% endwith %}
+	</p>
+{% endif %}
+
+<form method="post">
+	{{ form|crispy }}
+	<button type="submit" class="btn btn-primary btn-block btn-lg">{% trans "Confirm your email" %}</button>
+</form>
 
 {% endblock %}
